# logging-ext

./: .gitignore  README.md  pyproject.toml
src/logging_ext2/: __about__.py  handlers.py  types.py
tests/: __init__.py
